# data-pilot

./: .replit  app.py  pyproject.toml  replit.md  requirements.txt
components/: ai_insights.py  chart_builder.py  collaboration.py  data_processor.py  drag_drop_editor.py  export_utils.py  theme_manager.py
pages/: 1_Dashboard_Builder.py  2_Data_Sources.py  3_Reports.py  4_Deploy.py
utils/: dashboard_state.py  data_storage.py
